--- a/app/Resources/AthUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/AthUserBundle/views/Profile/show_content.html.twig
@@ -256,7 +256,7 @@
                     <div class="panel panel-default" id="panel{{ onePost.id }}" data-id="{{ onePost.id }}">
                        <div class="panel-heading">
                         <div class="row" style="font-size: 12px">
-                          <div class="col-md-10">
+                          <div class="col-md-9">
                             <a href="{{ path('ath_user_show_profile',{'slug': onePost.createdBy.slug }) }}">
                               <img class="" src="{{ onePost.createdBy.webPath | imagine_filter('micro') }}" alt="{{ onePost.createdBy }}" title="{{ onePost.createdBy }}" />
                             <i>{{ onePost.createdBy }}</i>
@@ -272,11 +272,12 @@
                             
                             {% endif %}
                           </div>
-                          <div class="col-md-2">
+                          <div class="col-md-3">
                             {# <span class="pull-right"> #}
                               {{ onePost.createdAt |localizeddate('short', "none")}}
+                              <br />
                               {% if onePost.createdBy == app.user %}
-                                  <a href="#" class="removePost" data-confirm="Voulez-vous vraiment supprimer cette article?"> Supprimer</a>
+                                  <a href="#" class="removePost" data-confirm="Voulez-vous vraiment supprimer cette article?"><i class="fa fa-trash-o" aria-hidden="true"></i> Supprimer</a>
                               {% endif %}
                             {# </span> #}
 
