--- a/web/sass/front/theme/style.scss
+++ b/web/sass/front/theme/style.scss
@@ -8454,3 +8454,8 @@ h1.title-error {
 .user_status {
   width: 101%;
 }
+
+/** Accueil **/
+.reviews_list .panel-heading .col-md-3 {
+  text-align: right;
+}
