--- a/app/Resources/AthUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/AthUserBundle/views/Profile/show_content.html.twig
@@ -81,13 +81,47 @@
           </a>
         </div>
         <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9 owl_photos">
-          <div id="owl-demo5" class="owl-carousel owl-theme">
+          <div id="issa">
 
-            <div class="item">
+            <div class="item2">
               <a title="Radical – Single Page PSD Template" data-rel="lightcase:myCollection" href="http://freelance.vioo.ru/wp-content/uploads/2015/11/demo1.png">
-                <img src="images/f-project.jpg" height="65" width="65" alt=""></a>
+                <img src="/images/f-project.jpg" height="65" width="65" alt=""></a>
             </div>
-
+            <div class="item2">
+              <a title="Radical – Single Page PSD Template" data-rel="lightcase:myCollection" href="http://freelance.vioo.ru/wp-content/uploads/2015/11/demo1.png">
+                <img src="/images/f-project.jpg" height="65" width="65" alt=""></a>
+            </div>
+            <div class="item2">
+              <a title="Radical – Single Page PSD Template" data-rel="lightcase:myCollection" href="http://freelance.vioo.ru/wp-content/uploads/2015/11/demo1.png">
+                <img src="/images/f-project.jpg" height="65" width="65" alt=""></a>
+            </div><div class="item2">
+              <a title="Radical – Single Page PSD Template" data-rel="lightcase:myCollection" href="http://freelance.vioo.ru/wp-content/uploads/2015/11/demo1.png">
+                <img src="/images/f-project.jpg" height="65" width="65" alt=""></a>
+            </div><div class="item2">
+              <a title="Radical – Single Page PSD Template" data-rel="lightcase:myCollection" href="http://freelance.vioo.ru/wp-content/uploads/2015/11/demo1.png">
+                <img src="/images/f-project.jpg" height="65" width="65" alt=""></a>
+            </div><div class="item2">
+              <a title="Radical – Single Page PSD Template" data-rel="lightcase:myCollection" href="http://freelance.vioo.ru/wp-content/uploads/2015/11/demo1.png">
+                <img src="/images/f-project.jpg" height="65" width="65" alt=""></a>
+            </div><div class="item2">
+              <a title="Radical – Single Page PSD Template" data-rel="lightcase:myCollection" href="http://freelance.vioo.ru/wp-content/uploads/2015/11/demo1.png">
+                <img src="/images/f-project.jpg" height="65" width="65" alt=""></a>
+            </div><div class="item2">
+              <a title="Radical – Single Page PSD Template" data-rel="lightcase:myCollection" href="http://freelance.vioo.ru/wp-content/uploads/2015/11/demo1.png">
+                <img src="/images/f-project.jpg" height="65" width="65" alt=""></a>
+            </div><div class="item2">
+              <a title="Radical – Single Page PSD Template" data-rel="lightcase:myCollection" href="http://freelance.vioo.ru/wp-content/uploads/2015/11/demo1.png">
+                <img src="/images/f-project.jpg" height="65" width="65" alt=""></a>
+            </div><div class="item2">
+              <a title="Radical – Single Page PSD Template" data-rel="lightcase:myCollection" href="http://freelance.vioo.ru/wp-content/uploads/2015/11/demo1.png">
+                <img src="/images/f-project.jpg" height="65" width="65" alt=""></a>
+            </div><div class="item2">
+              <a title="Radical – Single Page PSD Template" data-rel="lightcase:myCollection" href="http://freelance.vioo.ru/wp-content/uploads/2015/11/demo1.png">
+                <img src="/images/f-project.jpg" height="65" width="65" alt=""></a>
+            </div><div class="item2">
+              <a title="Radical – Single Page PSD Template" data-rel="lightcase:myCollection" href="http://freelance.vioo.ru/wp-content/uploads/2015/11/demo1.png">
+                <img src="/images/f-project.jpg" height="65" width="65" alt=""></a>
+            </div>
           </div>
           <div class="customNavigation">
 
@@ -648,7 +682,27 @@
         e.preventDefault();
         return false;
     });
+/*
+     if( typeof  window.lightcase == "object") { 
+            $('a[data-rel^=lightcase]').lightcase
+            ({
+                transition: 'scrollHorizontal',
+                showSequenceInfo: false,
+                showTitle: true,
+                swipe: true
+            });
 
+        }*/
+
+       $("#issa").owlCarousel({
+          navigation : true,
+        // autoPlay: 3000, //Set AutoPlay to 3 seconds
+   
+        items : 10,
+        // itemsDesktop : [1199,3],
+        // itemsDesktopSmall : [979,3]
+ 
+      });
   });
 </script>
 {% endblock %}
