--- a/web/sass/front/partials/practice.scss
+++ b/web/sass/front/partials/practice.scss
@@ -207,3 +207,12 @@
 //   margin-right: -15px;
 //   margin-bottom: 50px;
 // }
+
+#issa .item2{
+  margin: 3px;
+}
+#issa .item2 img{
+  display: block;
+  width: 100%;
+  height: auto;
+}
