--- a/app/Resources/views/Ath/Main/index.html.twig
+++ b/app/Resources/views/Ath/Main/index.html.twig
@@ -72,7 +72,11 @@
                          <div class="form-group" style="padding:14px;">
                           {{ form_widget(form.contenu) }}
                         <ul class="list-inline">
-                          <li>{{ form_widget(form.file) }}</li>
+                          <li>
+                              <label for="post_form_file" class="btn btn-primary">
+                                  <i class="glyphicon glyphicon-camera"></i> <span class="actu_value">Choisir un fichier</span>
+                              </label>
+                              {{ form_widget(form.file) }}</li>
                         </ul>
 
         
@@ -489,6 +493,10 @@
         return false;
     });
 
+      $('input[type="file"]').change(function() {
+          var val = ($(this).val() != "") ? "Fichier choisi : " + $(this).val() : "Choisir un fichier";
+          $('.actu_value').html(val);
+      });
   });
 </script>
 {% endblock %}
