--- a/app/Resources/views/Ath/Main/Post/ten_posts.html.twig
+++ b/app/Resources/views/Ath/Main/Post/ten_posts.html.twig
@@ -74,7 +74,7 @@
             </a>
           </div>
           <div class="col-md-4">
-              <a href="{{ path('ath_main_share_post', {'idPost': onePost.id }) }}">partager</a>
+              <a href="{{ path('ath_main_share_post', {'idPost': onePost.id }) }}"><i class="fa fa-share-alt" aria-hidden="true"></i> Partager</a>
           </div>
         </div>
       </div>
