--- a/app/Resources/views/Ath/Association/index.html.twig
+++ b/app/Resources/views/Ath/Association/index.html.twig
@@ -41,10 +41,17 @@
                 </div>
             </div>-->
     </div>
-    <form action="{{ path('ath_list_association') }}" method="POST" class="search_container">
-        {{ form_row(form._token) }}
-        {{ form_row(form.sports) }}
-        <input type="submit" value="Trier" class="btn btn-default" />
+    <form action="{{ path('ath_list_association') }}" method="POST" class="search_container asso_search">
+        <div class="row sc_f">
+            {{ form_row(form._token) }}
+            <div class="col-sm-9 col-md-9">
+                 <div class="col-sm-2 col-md-2"><label for="sports_form_sports" class="edited">Sport :</label></div>
+                 <div class="col-sm-10 col-md-10">{{ form_row(form.sports) }}</div>
+            </div>
+            <div class="col-sm-3 col-md-3">
+                <input type="submit" value="Trier" class="btn btn-default" />
+            </div>
+        </div>
     </form>
 
     <div class="container">
