--- a/web/sass/front/partials/practice.scss
+++ b/web/sass/front/partials/practice.scss
@@ -208,10 +208,10 @@
 //   margin-bottom: 50px;
 // }
 
-#issa .item2{
+#owl-product .item2{
   margin: 3px;
 }
-#issa .item2 img{
+#owl-product .item2 img{
   display: block;
   width: 100%;
   height: auto;
