--- a/app/Resources/views/Ath/Produit/page.html.twig
+++ b/app/Resources/views/Ath/Produit/page.html.twig
@@ -16,7 +16,7 @@
               <div class="col-xs-12 col-xs-offset-0 col-sm-6 col-md-6 col-sm-offset-1 col-md-offset-1">
                 <h1>{{ produit.libelle }}</h1>
                 <p>
-                  {{ produit.description }}
+                  {{ produit.description[:150]|striptags ~ ' ...' }} - <a href="#desc">En savoir plus</a>
                 </p>
                 <div class="row">
                   <div class="col-sm-6 col-md-4">
@@ -30,4 +30,20 @@
       </div>
     </div>
   </div>
+    <div class="open_items_content">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-md-12">
+                    <div id="desc" class="open_comments_form">
+                        <h5>Description</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <p>{{ produit.description }}</p>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock body %}
