--- a/web/sass/front/theme/style.scss
+++ b/web/sass/front/theme/style.scss
@@ -4609,7 +4609,7 @@ header .navigate > li > a:hover{
 .open_item_container h1{
 	margin-bottom: 35px;
     font-size: 60px;
-    margin-top: 100px;
+    margin-top: 0;
     font-weight: bold;
     color: #212339;
 }
