feat(Liste asso)

--- a/web/sass/front/theme/style.scss
+++ b/web/sass/front/theme/style.scss
@@ -8541,6 +8541,9 @@ h1.title-error {
   font-size: 18px;
   padding: 11px 12px;
 }
+.member-info .member_name {
+  border-bottom: 1px solid #b3de1d;
+}
 
 
 .open_items_block button.btn-view_full {
