--- a/app/Resources/views/Ath/Association/index.html.twig
+++ b/app/Resources/views/Ath/Association/index.html.twig
@@ -83,12 +83,14 @@
                                                 {{ association.ville }}
                                             </a>
                                         </li>
+                                        {%  if association.siteWeb is not empty %}
                                         <li>
                                             <a>
                                                 <i class="fa fa-laptop"></i>
                                                 {{ association.siteWeb }}
                                             </a>
                                         </li>
+                                        {% endif %}
                                     </ul>
                                 </div>
                             </div>
