--- a/app/Resources/views/Ath/Main/index.html.twig
+++ b/app/Resources/views/Ath/Main/index.html.twig
@@ -24,7 +24,7 @@
   <div class="user_properties">
     <div class="container">
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-3 colonne">
           <div class="user_friends">
             <h3>
               Evènement
@@ -247,7 +247,7 @@
           
         </div>
       </div>
-          <div class="col-md-3">
+          <div class="col-md-3 colonne">
               <div class="user_friends">
                   <h3>
                       <img src="{{ asset('images/equipe.png') }}" width="180" />
