--- a/web/sass/front/theme/style.scss
+++ b/web/sass/front/theme/style.scss
@@ -8395,7 +8395,7 @@ body.custom-background {
 
 /** Home **/
 
-.user_properties .col-md-3 {
+.user_properties .col-md-3.colonne {
   background-color: #e2e2e2;
 }
 .user_friends .event_preview {
