--- a/web/sass/front/theme/style.scss
+++ b/web/sass/front/theme/style.scss
@@ -8397,6 +8397,7 @@ body.custom-background {
 
 .user_properties .col-md-3.colonne {
   background-color: #e2e2e2;
+  border-radius: 6px;
 }
 .user_friends .event_preview {
   border: solid 2px #301E52;
