--- a/app/Resources/AthUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/AthUserBundle/views/Profile/show_content.html.twig
@@ -101,18 +101,17 @@
                         {# <img class="" src="/{{ oneProduit.fileProduits[0].webPath  }}" alt="{{ onePost.fileProduits[0] }}" title="{{ onePost.fileProduits[0] }}"  height="65" width="65"/> #}
                         {% include '@ath_main_path/Includes/user.html.twig' with {'user': oneProduit.fileProduits[0], 'img_filter' : 'mini' } %}
                         {% if app.user.hasUserComparateurProduits(oneProduit) %}
-                            <a title="Retirer du comparateur de prix"  id="addComparateur" class="action-comparateur" href="#" data-id="{{ oneProduit.id }}" data-label="supprimer">
+                            <a title="Retirer du comparateur de prix"  id="addComparateur{{ oneProduit.id }}" class="action-comparateur" href="#" data-id="{{ oneProduit.id }}" data-label="supprimer">
                                 <i class="fa fa-minus" aria-hidden="true"></i>
                             <a>
                         {% else %}
-                            <a title="Ajouter au comparateur de prix" id="addComparateur" class="action-comparateur" href="#" data-id="{{ oneProduit.id }}" data-label="ajouter">
+                            <a title="Ajouter au comparateur de prix" id="addComparateur{{ oneProduit.id }}" class="action-comparateur" href="#" data-id="{{ oneProduit.id }}" data-label="ajouter">
                                 <i class="fa fa-plus" aria-hidden="true"></i>
-                            <a>
+                            </a>
                         {% endif %}
                         
                     {% endif %}
                   {# <img src="/images/f-project.jpg" height="65" width="65" alt=""> #}
-                  </a>
                 </div>
             {% endfor %}
             
@@ -694,7 +693,7 @@
           })
           .done(function(data) {
             if (data) {
-              $("div").find("#addComparateur").html(data);
+              $("div").find("#addComparateur"+idProduit).html(data);
               // $(this).html(data);
             }
           })
