--- a/app/Resources/views/Ath/Main/index.html.twig
+++ b/app/Resources/views/Ath/Main/index.html.twig
@@ -258,8 +258,8 @@
                               </a>
                           </div>
                           <div class="col-md-6">
-                              <a style="text-decoration:none !important;" href="{{ nouvelle.link }}" target="_blank">
-                                  <p style="color: black; font-size: 12px; text-decoration:none !important; "><u>{{ nouvelle.title }}</u></p>
+                              <a href="{{ nouvelle.link }}" target="_blank">
+                                  <p>{{ nouvelle.title }}</p>
                               </a>
                           </div>
                       </div>
