--- a/app/Resources/AthUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/AthUserBundle/views/Profile/show_content.html.twig
@@ -456,15 +456,11 @@
                           </div>
                           <div class="col-md-6">
                               <a style="text-decoration:none !important;" href="{{ nouvelle.link }}" target="_blank">
-                                  <p style="color: black; font-size: 12px; text-decoration:none !important; "><u>{{ nouvelle.title }}</u></p>
+                                  <p style="color: black; font-size: 12px; text-decoration:none !important; ">{{ nouvelle.title }}</p>
                               </a>
                           </div>
                       </div>
                   {% endfor %}
-
-                  {% if countEvents > 12 %}
-                      <a href="{{ path('ath_main_event_sportifs') }}"><button class="btn-new-info">{{ "voir_tous_events" | trans({}, 'home') }}</button></a>
-                  {% endif %}
               </div>
           </div>
       </div>
