--- a/app/Resources/views/Ath/Main/index.html.twig
+++ b/app/Resources/views/Ath/Main/index.html.twig
@@ -254,7 +254,7 @@
                           <div class="col-md-6">
                               <a href="{{ nouvelle.link }}" target="_blank">
 
-                                  <img class="" src="{{ nouvelle.image }}" alt="{{ nouvelle.title }}" title="{{ nouvelle.title }}" />
+                                  <img width="135px" height="90px" class="" src="{{ nouvelle.image }}" alt="{{ nouvelle.title }}" title="{{ nouvelle.title }}" />
                               </a>
                           </div>
                           <div class="col-md-6">
