--- a/app/Resources/AthUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/AthUserBundle/views/Profile/show_content.html.twig
@@ -455,7 +455,7 @@
                               </a>
                           </div>
                           <div class="col-md-6">
-                              <a style="text-decoration:none !important;" href="{{ nouvelle.link }}" target="_blank">
+                              <a style="text-decoration:none !important;" href="{{ nouvelle.link }}" target="_blank" title="{{ nouvelle.title }}" >
                                   <p style="color: black; font-size: 12px; text-decoration:none !important; ">{{ nouvelle.title }}</p>
                               </a>
                           </div>
