--- a/app/Resources/AthUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/AthUserBundle/views/Profile/show_content.html.twig
@@ -449,9 +449,8 @@
                   {% for nouvelle in lequipe %}
                       <div class="row event_preview small">
                           <div class="col-md-6">
-                              <a href="{{ nouvelle.link }}" target="_blank">
-
-                                  <img width="135px" height="90px" class="" src="{{ nouvelle.image }}" alt="{{ nouvelle.title }}" title="{{ nouvelle.title }}" />
+                              <a href="{{ nouvelle.link }}" title="{{ nouvelle.title }}" target="_blank">
+                                  <img width="135px" height="90px" class="" src="{{ nouvelle.image }}" alt="{{ nouvelle.title }}" />
                               </a>
                           </div>
                           <div class="col-md-6">
